@@ -7,15 +7,15 @@ DIST highlight-3.16.tar.bz2 613356 SHA256 994e8da0b86549fb16c4590769731315d01db6
 DIST highlight-3.3.tar.bz2 740651 SHA256 96c415d62488c6522e9933ecdfce447eb8eecd3b88a1064f42908c936ea02d87 SHA512 10530f485e57aa8068edddca3b0f75fcdd1c756d45740e7dd4eeaeb8b87cebd022f6283ecd37a057ef18f30e8cb56eeb412e8ba0c0542320a751b8b9c3dbf1c9 WHIRLPOOL 8b0ccfa97d5343b0edb2cf11d92116df4ebdac5d7157569d758c8eb2a113dd07612438ef9eeeda9138a7aa9d64c027ba5dab31054700acbc6823b6868ff4a77c
 DIST highlight-3.9.tar.bz2 683718 SHA256 4ae69795e3ca4ffef47355a7b6dc371e2d781735efd44fa12ff3a1ffc990daef SHA512 4f75232eae5f18f37666e04467993eab8ba983ec86ba6fbef4fbd6fea1e4b2a388beff75a72cfb00c1a90a6fa6dcab9cd68d40cde940f6aaff5174304102cada WHIRLPOOL 1d0ab7fa034fa16cf07318a1140d261942ad98b73108b1b83c578e98f836c9d933ad731320b8aa183f958572e10f3970f64b822954fe5065f8ec6692290f6e9a
 EBUILD highlight-3.12.ebuild 1738 SHA256 ee8fe6005d11ad0e4aae1adf221b18d9767f32156659731d9f207ead6ea18e6e SHA512 a05be64c68d258d582d5f2cf863eb5d1e12918abf350d7a796a53d9f2585b79818bda3f861d7b6f25eb7ef73e4fb61fbdfd05da30992260c7faed239bb2436e4 WHIRLPOOL d5cfb805065c0a17086b32393a188619e2b10a303e2c3ac14541527646cd8ee592f6a0713d6cc52f718af369453b4af08030ce00b9db9ea033a7fa515d4efdc8
-EBUILD highlight-3.16.ebuild 1810 SHA256 f6ba803f909f47ea41d195030034d27db9a716b5c8001a81232f086c95c04ab2 SHA512 0c1eee29770738697de383f4d8d5c32547a33ae4fe9f4457a1425976b837226e82cd9719d08f4ff5e686e715ac232aac65ad25eeb34ae2dff6811f42b8d53fa1 WHIRLPOOL c4e254ee9eeed62f83ee1d56171abef8f7e7e89906d39b37dbc9c1f555eba6252200efc1219cf75aecf7c4040b00f3b0070eeefa6e07ceb3b71b00ff11f6fd57
+EBUILD highlight-3.16.ebuild 1808 SHA256 468b95882e8260e41b473dc28cd21b6aeffac3c856e1e03c4ea831437f8f88ee SHA512 1233590fce11124397d193ee4d38cd613213d6c751a88c42998926b014bd4c2a6f7d13f1ab2bc8e6bbf5b66d2a72ab7d54d5b356b2bdcca3148d72d9dd825f9e WHIRLPOOL 6e692ba62b20a6c5558f4ba3627008a8ad298b1a2a3e229431dbcf17cf695b4cf5d81300e4ab674813f8f57ce316ae27bc2dba45f6a9ac0acda17d56f440753e
 EBUILD highlight-3.3.ebuild 1582 SHA256 c4c9011597f1db627cc7099e961119fe05013bf2dbc1accf76c29179c0756179 SHA512 091271a877678aa20bda86c4bd59223d464f1df3e312ed25ec7b27a6f5f044c5b8fbaa0f26e8d8aba20643b2b0fe0ab3de47c7355c8db8d5a6b11fa22333f0ae WHIRLPOOL 41e058e72d809ce5c6e3490fe726a0a69773b76d44e8df67c621b870326cc6f6ef78d5d0b79a6fa6b0e86413bb402078e52a134666c37f10bacde40a66a2853d
 EBUILD highlight-3.9.ebuild 1699 SHA256 0996fe561d36f06fd796f6bc6033ca8d40b3d028696fd213c25cb27607cc8c57 SHA512 371f4976ee0cca1006fcf53730d52c042625c2414d1008a82921c2b3e969d541358da1746ca2565c26914f5fcde14d018872376e8e9af315bb925b63d034f9c2 WHIRLPOOL 3c0d8e4ea992fb019edb7d47febcf991df231fbf40a3bf347c05ff37287b31972e924561388f9d94bec08d5d3f03293f3fea84b2b3836eaaa7c54ac9dc5dc699
-MISC ChangeLog 9352 SHA256 60e51e6422d7c663b85e5850e33c78855e5351c1529b66a1d4c0b5c2d1bb3915 SHA512 4dd8f41932ebf4fe39a216a30419f0c54ec0a3a891d63011d801d05a07e83d2f48cc681721d4f3b7f030cf662f0482fc5f2a583584660ade95cde2dfc0dc7a42 WHIRLPOOL 2450ee2bbd61b93810c06f48d94568fae5a2bd510de1509aa77dd1ef4dced16e465bf027cdb182e5beaeaac71b8f1cc57d03ef1c695d7bceaa1185ad42e6bcf3
+MISC ChangeLog 9449 SHA256 e0805900e56372e477e904226f86f6b5a9bdec42c297c69bcde740cbce1220ac SHA512 0a1e2b1e84ae81bb423bf46cbe1597327d8624d2c6feb04433a60ae9e443054b90e455e83e099a1748282bf5cd60d15f84a6a61a2c1b6b6e802675b71ff96cde WHIRLPOOL 835816e956fafcabc3eae0d1b31017f03f09c7f8e6ace1cb092cd61ec9a1b60d548ea25a9774a6d6196c4ce57b392feb9ac617db4b84d93ba84cec5d9c762e54
 MISC metadata.xml 157 SHA256 18238fb417d8677a0495cdaba9b043526174ba63b51494b88b10aa7dd903124c SHA512 75e0efcf5c8d50f92e141195133552316ac8583ae52f46ecfaefbf4028c487792e7cd254aef67a6e734ca85f030e4f08cee038d78b9656ecacf5cb3a99b8564c WHIRLPOOL 16b7bdbd1883f22e8f69d3bc36910051cde172c0b49084714f87af8cfc5f4b627a73ee9afa100fd6cb39f4a8c525e9b21b07ad590058bcfd2abf1cd64024db4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLAXqYACgkQkKaRLQcq0GLObwCZATviUl0jIdWRDR+zR4R6VEQo
-7IYAn3uR90eIZnsjc1ttYOohHV5nZIJP
-=O7X9
+iEYEAREIAAYFAlLS+b4ACgkQCaWpQKGI+9QzpQCff+Fds2JOnK1DPNwgIzBuuWiN
+9f4AnRdlSKZ9bAc9Xn5TorWqDg1Srfgw
+=jVAo
 -----END PGP SIGNATURE-----
