@@ -1,6 +1,9 @@
 # ChangeLog for app-text/highlight
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.71 2013/12/29 17:33:48 maekke Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.72 2014/01/12 20:23:25 pacho Exp $
+
+  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> highlight-3.16.ebuild:
+  amd64 stable, bug #495352
 
   29 Dec 2013; Markus Meier <maekke@gentoo.org> highlight-3.16.ebuild:
   arm stable, bug #495352
